Fix infobar scrollbar on Safari (#7897)

--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -16,6 +16,7 @@
 
   .container {
     max-width: calc(100vw ~"-" @navbarWidth);
+    max-height: 100%;
   }
 
   .content {
