--- a/src/pages/common/components/infobar/Infobar.less
+++ b/src/pages/common/components/infobar/Infobar.less
@@ -6,8 +6,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     background-color: @quartz;
     border-left: 1px solid @infobarBorderColor;
 
@@ -117,7 +115,6 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        overflow: auto;
     }
 
     .infobarSectionSeparator {
